--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "deploy-to-vercel-action",
-  "version": "1.10.0",
+  "name": "vercel-deploy",
+  "version": "1.11.0",
   "description": "Deploy your project to Vercel using GitHub Actions. Supports PR previews and GitHub deployments.",
   "main": "dist/index.js",
   "scripts": {
@@ -11,28 +11,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/betahuhn/deploy-to-vercel-action.git"
+    "url": "git+https://github.com/helmut-hoffer-von-ankershoffen/vercel-deploy.git"
   },
   "keywords": [],
   "author": "Maximilian Schiller <schiller@mxis.ch>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/betahuhn/deploy-to-vercel-action/issues"
+    "url": "https://github.com/helmut-hoffer-von-ankershoffen/vercel-deploy/issues"
   },
-  "homepage": "https://github.com/marketplace/actions/deploy-to-vercel-action",
+  "homepage": "https://github.com/marketplace/actions/vercel-deploy",
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.11.0",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^4.0.0",
+    "@actions/github": "^6.0.0",
     "action-input-parser": "^1.2.38",
-    "dotenv": "^9.0.2",
-    "got": "^11.8.3",
-    "vercel": "^22.0.1"
+    "dotenv": "^16.4.7",
+    "got": "^14.4.7",
+    "vercel": "^41.4.1"
   },
   "devDependencies": {
     "@betahuhn/config": "^1.2.0",
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^7.32.0"
+    "@vercel/ncc": "^0.38.3",
+    "eslint": "^9.23.0"
   },
   "engines": {
     "node": "20"
