--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,5 +46,5 @@ jobs:
           GIT_AUTHOR_NAME: "Helmut Hoffer von Ankershoffen"
           GIT_AUTHOR_EMAIL: "helmuthva@googlemail.com"
           GIT_COMMITTER_NAME: "Helmut Bot"
-          GIT_COMMITTER_EMAIL: "helmuthva+bot@googlemail."
+          GIT_COMMITTER_EMAIL: "helmuthva+bot@googlemail.com"
           COMMIT_ASSETS: dist
