--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "Deploy to Vercel"
 description: "Deploy your project to Vercel using GitHub Actions. Supports PR previews and GitHub deployments."
-author: "BetaHuhn"
+author: "BetaHuhn, helmut-hoffer-von-ankershoffen"
 
 inputs:
   GITHUB_TOKEN:
