chore(security): least privilege

--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -5,6 +5,11 @@ on:
 jobs:
   latest:
     name: Latest
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     runs-on: windows-latest
     steps:
       - name: Update latest tag
