--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,6 +6,11 @@ on:
 jobs:
   auto-merge:
     name: Auto Merge
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - name: Merge minor/patch updates
