--- a/.github/workflows/release-scheduler.yml
+++ b/.github/workflows/release-scheduler.yml
@@ -5,6 +5,11 @@ on:
   workflow_dispatch:
 jobs:
   releaseScheduler:
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - name: Run release-scheduler
