--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,11 @@ on:
 jobs:
   lint:
     name: Lint
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
@@ -22,6 +27,11 @@ jobs:
         run: npm run lint
   release:
     needs: [lint]
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     name: Build and release
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -42,7 +52,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           GIT_AUTHOR_NAME: "Helmut Hoffer von Ankershoffen"
-          GIT_AUTHOR_EMAIL: "helmuthva@googlemail.com"
+          GIT_AUTHOR_EMAIL: "helmuthva@gmail.com"
           GIT_COMMITTER_NAME: "Helmut Bot"
           GIT_COMMITTER_EMAIL: "helmuthva+bot@googlemail.com"
           COMMIT_ASSETS: dist
