--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/helmut-hoffer-von-ankershoffen/vercel-deploy.git"
   },
   "keywords": [],
-  "author": "Maximilian Schiller <schiller@mxis.ch>, Helmut Hoffer von Ankershoffen <helmuthva@googlemail.com>",
+  "author": "Maximilian Schiller <schiller@mxis.ch>, Helmut Hoffer von Ankershoffen <helmuthva@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/helmut-hoffer-von-ankershoffen/vercel-deploy/issues"
