--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,7 @@ jobs:
   lint:
     name: Lint
     permissions:
-      packages: write
       contents: read
-      attestations: write
       id-token: write
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -27,12 +25,10 @@ jobs:
         run: npm run lint
   release:
     needs: [lint]
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
     name: Build and release
+    permissions:
+      contents: write
+      issues: write
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
