--- a/.github/workflows/release-scheduler.yml
+++ b/.github/workflows/release-scheduler.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   releaseScheduler:
     permissions:
-      contents: read
+      contents: write
+      issues: write
       id-token: write
     runs-on: ubuntu-latest
     steps:
